Overlapping fixed nav mobile fix

--- a/Technical-page/style.css
+++ b/Technical-page/style.css
@@ -118,6 +118,7 @@ code{
     width: 75.1%;
     height: auto;
     background-color: #00060F;
+    
 }
 #main-doc{
     display: flex;
@@ -597,6 +598,9 @@ code{
 } 
  /* Medium devices (landscape tablets, 768px and up) */
  @media only screen and (max-width: 768px) {
+     html{
+         scroll-padding-top: 89px;
+     }
     .container.nav{
         width: 100%;
         height: 55px;
